# spark-benchmark

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot_results.py
src/: main.cpp  parameters.cpp  parameters.h  simulation.cpp  simulation.h  simulation_events.cpp
